[metadata]
# replace with your username:
name = pysbml4j
version = 1.2.0
author = Thorsten Tiede
author_email = thorsten.tiede@uni-tuebingen.de
description = The python client package to interact with a running SBML4j service instance
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kohlbacherlab/pysbml4j
project_urls =
    Bug Tracker = https://github.com/kohlbacherlab/pysbml4j/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    urllib3
[options.packages.find]
where = src
